--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -174,6 +174,10 @@
           type: Object,
           value: {}
         },
+        params: {
+          type: Object,
+          observer: '_onParamsChanged'
+        },
         _tab: {
           type: Number,
           value: 0
@@ -248,6 +252,28 @@
           data: "RLE format"
         }]);
 
+      },
+
+      _onParamsChanged: function(newParams){
+        // process params
+        // console.log(this.params);
+
+        if(this.params.state){
+          if(this.params.state === 'playing'){
+            this.app.controller.isRunning = true;
+            this.$.togglecontroller.textContent = "Pause";
+          }
+          else if(this.params.state === 'paused'){
+            this.app.controller.isRunning = false;
+            this.$.togglecontroller.textContent = "Resume";
+          }
+        }
+
+        if(this.params.data){
+          var lifeCanvas = document.querySelector('life-canvas')
+          lifeCanvas.clearCanvas();
+          lifeCanvas.injectPattern(0, 0, this.params.data);
+        }
       },
 
       handleTap: function(e, detail) {
