--- a/src/life-canvas/life-canvas.html
+++ b/src/life-canvas/life-canvas.html
@@ -241,13 +241,20 @@
 
       _encodeRLE: function(){
         var accumulator = [];
-        var t = [];
+        var line = [];
         for(i = 0; i < this.app.gameManager.CELL_LENGTH_Y; i++){
           for(j = 0; j < this.app.gameManager.CELL_LENGTH_X; j++){
-            t.push(Cell.getCellAt(j, i).state);
+            line.push(Cell.getCellAt(j, i).state);
           }
-          accumulator.push(t.join(''));
-          t = [];
+
+          var t = line.join('');
+          if(t.includes('1')){
+            accumulator.push(t);
+          }
+          else{
+            accumulator.push('');
+          }
+          line = [];
         }
         // console.log(accumulator);
         // var accumulator = this.app.gameManager.cells.reduce(function(accumulator, cell, index, array){
